src/test/ui/self/arbitrary-self-types-not-object-safe.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/arbitrary-self-types-not-object-safe.rs:31:32
   |
LL |     let x = Rc::new(5usize) as Rc<dyn Foo>;
   |                                ^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: method `foo`'s receiver cannot be dispatched on

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/arbitrary-self-types-not-object-safe.rs:31:13
   |
LL |     let x = Rc::new(5usize) as Rc<dyn Foo>;
   |             ^^^^^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: method `foo`'s receiver cannot be dispatched on
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<std::rc::Rc<dyn Foo>>` for `std::rc::Rc<usize>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
